--- a/javaassig2.html
+++ b/javaassig2.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/all.min.css"/>
         <link rel="stylesheet" href="css/stylejava2.css"/>
@@ -18,7 +19,7 @@
       <main role="main">
 
         <div class="jumbotron mt-3 text-center">
-          <h2 >Bookmark Your Favorite Sites</h2>
+          <h4 >Bookmark Your Favorite Sites</h4>
           <form id="myform">
               <div class="form-group">
                   <label>Site Name</label>
